# setups

./: .Rules.make.swp  .gitattributes  .gitignore  Boxes.make  CMakeLists.txt  CMake_configure.sh  Makefile  README  README.md  Rules.make  SETUPS  build_all.sh  clone_sources.sh  run_box_test.sh
NorthSea/: .gitignore  CMakeLists.txt  Makefile  NorthSea.xml  README  RUN  attenuation.nc  configure.sh  fabm-gotm-fasham.yaml  fabm_surface_fluxes.nc  getm.inp  gotmturb.nml
baltic_4x2/: .gitignore  Makefile  baltic_4x2.dim  baltic_4x2.xml  bdy_2d.nc  bdy_3d.nc  clone_sources.sh  compile_getm.sh  dimensions.h  fabm.yaml  gotm_fabm.nml  gotmturb.nml  machinefile  parallel.inp  rivers.nc  run_all.sh  topo.nc
box_cartesian/: CMakeLists.txt  Makefile  README  box_cartesian.4p.dim  box_cartesian.dim  box_cartesian.xml  filelist  getm.inp  getm_fabm.inp  log.speedup  run_tests.sh  show_timer_speedup.pl  timestamp  topo.nc  topo_min.nc
box_curvilinear/: CMakeLists.txt  Makefile  README  box_curvilinear.4p.dim  box_curvilinear.dim  box_curvilinear.xml  filelist  getm.inp  timestamp  topo.nc  topo_min.nc
box_spherical/: CMakeLists.txt  Makefile  README  box_spherical.dim  box_spherical.xml  filelist  getm.inp  gotmturb.nml  timestamp  topo.nc  topo_min.nc
haidvogel/: Makefile  README  filelist  getm.inp  haidvogel.dim  haidvogel.input.nc  haidvogel.xml  timestamp
seamount/: .filelist.swp  CMakeLists.txt  Makefile  README  filelist  getm.inp  parallel.inp  seamount.1p.dim  seamount.2p.dim  seamount.4p.dim  seamount.8p.dim  seamount.dim  seamount.xml  topo.nc
sylt/: Makefile  (+10 more)
(+63 files in other folders)
